syntax = "proto3";

package ark_msgs;

// A joint state message for a robot.
message JointState {
  repeated string name = 1;
  repeated float position = 2;
  repeated float velocity = 3;
  repeated float effort = 4;
  repeated float ext_torque = 5;  
}